--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
-<!DOCTYPE html>
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Jorge Sanchez'</title>
+    <title>Jorge Sanchez' site</title>
 </head>
 <body>
     <table>
